# shed

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/shed/: Cargo.toml
crates/shed-core/: Cargo.toml
crates/shed-core/src/: aliases.rs  block.rs  capture.rs  filter.rs  lib.rs  notebook.rs  session.rs  shed.rs  value.rs
crates/shed/src/: ansi.rs  exec.rs  main.rs  tui.rs
crates/shed/src/tui/: clipboard.rs  completion.rs  input.rs  render.rs  tabs.rs
docs/: review-2026-05-17.md
