[package]
name = "shed-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Core data model and filter execution for shed"

[dependencies]
bytes = "1.11.1"
csv = "1.4.0"
indexmap = "2.14.0"
regex = "1.12.3"
serde_json = "1.0.149"
thiserror = "2.0.18"
