[package]
name = "shed-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Core data model and filter execution for shed"

[dependencies]
bytes = { version = "1.11.1", features = ["serde"] }
csv = "1.4.0"
indexmap = { version = "2.14.0", features = ["serde"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
vte = "0.15"
