[package]
name = "shed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "An interactive shell with retroactive pipelines"

[[bin]]
name = "shed"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
crossterm = "0.29.0"
csv = "1.4.0"
indexmap = "2.14.0"
jiff = "0.2.24"
portable-pty = "0.9.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde_json = "1.0.149"
shed-core.workspace = true
shlex = "1.3.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
vte = "0.15.0"
wait-timeout = "0.2.1"
